css correction for watchlist add on mobile views

--- a/goobi-viewer-core/WebContent/resources/css/less/viewer/components/imageControls.less
+++ b/goobi-viewer-core/WebContent/resources/css/less/viewer/components/imageControls.less
@@ -191,7 +191,8 @@
 	    float: left;
 	}
     li.image-control__zoom-slider,
-    li.image-control__pdf {
+    li.image-control__pdf,
+    li.image-control&__add-to-bookshelf {
         display: none;
     }
 }
